--- a/client/src/app/feed-list/feed-list.component.html
+++ b/client/src/app/feed-list/feed-list.component.html
@@ -1,13 +1,12 @@
-<mat-list>
-  <mat-list-item *ngFor="let feed of feeds">
-    <div class="label" matListAvatar>{{feed}}</div>
+<mat-nav-list>
+  <mat-list-item *ngFor="let feed of feeds; let i = index"
+                 (click)="select.emit(feed); selectIndex=i"
+  >
+    <!-- <div class="label" matListAvatar>{{feed.source}}</div> -->
     <h3 matLine> {{feed.title}} </h3>
     <p matLine>
       <span>{{feed.author}}</span>
     </p>
 
-    <div matLine class="feed-detail">
-      <div [innerHtml]="feed.content | trustHtml"></div>
-    </div>
   </mat-list-item>
-</mat-list>
+</mat-nav-list>
