--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<app-feed-list></app-feed-list>
+<app-category></app-category>
+
+<app-feed-list [feeds]="feeds" (select)="onFeedListSelect($event)"></app-feed-list>
+
+<app-article-preview [feed]="selectedFeed"></app-article-preview>
 
