--- a/client/src/app/push-control/push-control.component.html
+++ b/client/src/app/push-control/push-control.component.html
@@ -1,3 +1,10 @@
-<button mat-fab>
-  <mat-icon svgIcon="notifications" (click)="subscribeToPush()">subscribe</mat-icon>
+<button mat-fab (click)="subscribeToPush()">
+  <mat-icon svgIcon="notifications">subscribe</mat-icon>
 </button>
+
+<button mat-mini-fab (click)="ping()">
+  <mat-icon svgIcon="send">send</mat-icon>
+</button>
+
+
+
