--- a/client/src/app/push-control/push-control.component.html
+++ b/client/src/app/push-control/push-control.component.html
@@ -2,7 +2,7 @@
   <mat-icon svgIcon="notifications">subscribe</mat-icon>
 </button>
 
-<button mat-mini-fab (click)="ping()">
+<button mat-mini-fab (click)="ping()" color="warn">
   <mat-icon svgIcon="send">send</mat-icon>
 </button>
 
