--- a/client/src/app/push-control/ping-dialog/ping-dialog.component.html
+++ b/client/src/app/push-control/ping-dialog/ping-dialog.component.html
@@ -1,7 +1,10 @@
-<h2 mat-dialog-title>Delete all</h2>
-<mat-dialog-content>Are you sure?</mat-dialog-content>
+<h2 mat-dialog-title>Ping Notifications</h2>
+<mat-dialog-content>
+  <mat-form-field>
+    <input matInput [(ngModel)]="msg" placeholder="What's you want to ping">
+  </mat-form-field>
+</mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>No</button>
-  <!-- The mat-dialog-close directive optionally accepts a value as a result for the dialog. -->
-  <button mat-button [mat-dialog-close]="true">Yes</button>
+  <button mat-button [mat-dialog-close]="msg">Ping</button>
 </mat-dialog-actions>
