add login module

--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -1,13 +1,16 @@
 
-<form class="form">
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="" value="Sushi">
-  </mat-form-field>
-
-  <mat-form-field class="example-full-width">
-    <input type="password" matInput placeholder="Favorite food" value="Sushi">
-  </mat-form-field>
-
-  <button mat-button (click)="handleLogin()">Click me!</button>
-
-</form>
+<div class="container">
+  <form class="form">
+    <mat-form-field class="">
+      <input matInput placeholder="" value="Sushi">
+    </mat-form-field>
+  
+    <mat-form-field class="">
+      <input type="password" matInput placeholder="Favorite food" value="Sushi">
+    </mat-form-field>
+  
+    <button mat-button (click)="handleLogin()">Click me!</button>
+  
+  </form>
+  
+</div>
