--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -1,16 +1,26 @@
-
 <div class="container">
-  <form class="form">
-    <mat-form-field class="">
-      <input matInput placeholder="" value="Sushi">
-    </mat-form-field>
-  
-    <mat-form-field class="">
-      <input type="password" matInput placeholder="Favorite food" value="Sushi">
-    </mat-form-field>
-  
-    <button mat-button (click)="handleLogin()">Click me!</button>
-  
-  </form>
-  
+  <mat-card>
+    <form [formGroup]="form">
+      <mat-form-field class="">
+        <input matInput placeholder="Username" formControlName="username" />
+      </mat-form-field>
+
+      <mat-form-field class="">
+        <input
+          type="password"
+          matInput
+          placeholder="Password"
+          formControlName="password"
+        />
+      </mat-form-field>
+
+      <button 
+        mat-button 
+        mat-raised-button
+        (click)="handleLogin()" 
+        color="primary">
+        Login
+      </button>
+    </form>
+  </mat-card>
 </div>
