query feed source feature

--- a/client/src/app/feed-source-page/feed-source-creater/feed-source-creater.component.html
+++ b/client/src/app/feed-source-page/feed-source-creater/feed-source-creater.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
 
   <mat-form-field class="">
-    <input matInput placeholder="Name" formControlName="url" />
+    <input matInput placeholder="Name" formControlName="name" />
   </mat-form-field>
 
   <mat-form-field class="">
