feed source item

--- a/client/src/app/feed-source-page/feed-source-page.component.html
+++ b/client/src/app/feed-source-page/feed-source-page.component.html
@@ -1,6 +1,5 @@
 <div>
-  <li *ngFor="let source of (feedSourceService.feedSources$ | async)"> {{ source.name }} </li>
+  <app-feed-source-item *ngFor="let source of (feedSourceService.feedSources$ | async)" [source]="source"></app-feed-source-item>
 </div>
-
 
 <app-feed-source-creater></app-feed-source-creater>
