client code for new feed struct

--- a/client/src/app/article-preview/article-preview.component.html
+++ b/client/src/app/article-preview/article-preview.component.html
@@ -1,4 +1,4 @@
-<a class="title-link" [href]="feed?.link" target="_blank">
+<a class="title-link" [href]="feed?.originHref" target="_blank">
   <button mat-button>
     <h2>{{feed?.title}}</h2>
   </button>
