initial ngrx for state manangement

--- a/client/src/app/article-preview/article-preview.component.html
+++ b/client/src/app/article-preview/article-preview.component.html
@@ -6,6 +6,8 @@
 
   </a>
 
+  <app-article-preview-info-area></app-article-preview-info-area>
+
   <fa-icon (click)="handleFavoriteIconClick()" [icon]="faStar"></fa-icon>
   
   <div class="content" [innerHtml]="feed?.content | trustHtml"></div>
