--- a/client/src/app/feeds-page/feeds-page.component.html
+++ b/client/src/app/feeds-page/feeds-page.component.html
@@ -3,7 +3,7 @@
 <app-category></app-category>
 
 <app-feed-list
-  [feeds]="feeds"
+  [feeds]="feeds$ | async"
   (select)="onFeedListSelect($event)"
   infiniteScroll
   [infiniteScrollDistance]="2"
