--- a/client/src/app/article-preview/article-preview.component.html
+++ b/client/src/app/article-preview/article-preview.component.html
@@ -1,9 +1,10 @@
 <div *ngIf="feed">
+  <fa-icon [icon]="faBookmark"></fa-icon>
+
   <a class="title-link" [href]="feed?.originHref" target="_blank">
     <button mat-button>
       <h2>{{feed?.title}}</h2>
     </button>
-
   </a>
 
   <app-article-preview-info-area></app-article-preview-info-area>
