--- a/client/src/app/feed-list/feed-list.component.html
+++ b/client/src/app/feed-list/feed-list.component.html
@@ -8,7 +8,7 @@
     <div matLine>
       <p class="info">
         <span>{{feed.author}}</span>
-        <span class="time-distance">{{calcPublishedDistance(feed.published)}}</span>
+        <span class="time-distance">{{calcPublishedDistance(feed.publishedDate)}}</span>
       </p>
     </div>
 
