restyle format/preview

--- a/client/src/app/article-preview/article-preview-info-area/article-preview-info-area.component.html
+++ b/client/src/app/article-preview/article-preview-info-area/article-preview-info-area.component.html
@@ -1,2 +1,4 @@
-
-<div class="line-container"></div>
+<div class="line-container">
+  <span>{{ feed.publishedDate | date: "EEEE MMMM dd,yyyy h:mm aa" }}</span>
+  <span> via {{ feed.source.name }}</span>
+</div>
