--- a/client/src/app/feeds-page/feeds-page.component.html
+++ b/client/src/app/feeds-page/feeds-page.component.html
@@ -11,6 +11,4 @@
   (scrolled)="queryFeeds()"
 ></app-feed-list>
 
-<app-article-preview 
-  [feedId]="urlFeedId$ | async"
-></app-article-preview>
+<app-article-preview [feedId]="urlFeedId$ | async"></app-article-preview>
