--- a/client/src/app/push-control/ping-dialog/ping-dialog.component.html
+++ b/client/src/app/push-control/ping-dialog/ping-dialog.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Ping Notifications</h2>
 <mat-dialog-content>
   <mat-form-field>
-    <input matInput [(ngModel)]="msg" placeholder="What's you want to ping">
+    <input matInput [(ngModel)]="msg" placeholder="What's you want to ping" />
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
