--- a/client/src/app/article-avatar/article-avatar.component.html
+++ b/client/src/app/article-avatar/article-avatar.component.html
@@ -1,4 +1,7 @@
-<div class="article-avatar" [style.backgroundColor]="hasImage ? 'transparent' : bgColor">
-  <div class="source-name">{{feed.source.name}}</div>
+<div
+  class="article-avatar"
+  [style.backgroundColor]="hasImage ? 'transparent' : bgColor"
+>
+  <div class="source-name">{{ feed.source.name }}</div>
   <img #image *ngIf="hasImage" [src]="imgSrc" (error)="hasImage = false" />
 </div>
