--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -14,11 +14,12 @@
         />
       </mat-form-field>
 
-      <button 
-        mat-button 
+      <button
+        mat-button
         mat-raised-button
-        (click)="handleLogin()" 
-        color="primary">
+        (click)="handleLogin()"
+        color="primary"
+      >
         Login
       </button>
     </form>
