--- a/client/src/app/article-preview/article-preview-star/article-preview-star.component.html
+++ b/client/src/app/article-preview/article-preview-star/article-preview-star.component.html
@@ -1,6 +1,5 @@
+<div (click)="onClick()">
+  <fa-icon class="bookmark" size="2x" [icon]="faBookmark"></fa-icon>
 
-<fa-icon class="bookmark" size="2x" [icon]="faBookmark"></fa-icon>
-
-
-<fa-icon class="star" [icon]="faStar"></fa-icon>
-
+  <fa-icon class="star" [icon]="faStar"></fa-icon>
+</div>
