add mark feature

--- a/client/src/app/article-preview/article-preview-info-area/article-preview-info-area.component.html
+++ b/client/src/app/article-preview/article-preview-info-area/article-preview-info-area.component.html
@@ -3,6 +3,6 @@
     <span>{{ feed.publishedDate | date: "EEEE MMMM dd,yyyy h:mm aa" }}</span>
     <span> via {{ feed.source.name }}</span>
 
-    <div class="read-source">Read Source</div>
+    <div class="read-source" (click)="openSourceHref()">Read Source</div>
   </div>
 </div>
