--- a/client/src/app/article-preview/article-preview-star/article-preview-star.component.html
+++ b/client/src/app/article-preview/article-preview-star/article-preview-star.component.html
@@ -1,5 +1,5 @@
-<div (click)="onClick()">
+<div>
   <fa-icon class="bookmark" size="2x" [icon]="faBookmark"></fa-icon>
 
-  <fa-icon class="star" [icon]="faStar"></fa-icon>
+  <fa-icon class="star" [icon]="isStar ? faStar : faStarO"></fa-icon>
 </div>
