--- a/client/src/app/article-preview/article-preview-info-area/article-preview-info-area.component.css
+++ b/client/src/app/article-preview/article-preview-info-area/article-preview-info-area.component.css
@@ -1,8 +1,9 @@
 :host .line-container {
   height: 1px;
-  width: 100%;
-  background-color: black;
-  margin-bottom: 40px;
+  width: calc(100% - 40px);
+  background-color: #bbb;
+  color: #999;
+  margin: 0 20px 40px;
   font-family: "Open Sans", sans-serif;
   font-weight: 900;
   position: relative;
