--- a/client/src/app/article-preview/article-preview.component.css
+++ b/client/src/app/article-preview/article-preview.component.css
@@ -7,17 +7,12 @@
 
 :host h2 {
   text-align: center;
+  padding: 0 10px;
 }
 
-.title-link {
-  display: inline-block;
-}
-.title-link button {
-  white-space: normal;
-}
-.title-link h2 {
-  color: black;
-  font-weight: bold;
+.content {
+  padding: 0 20px;
+  color: #333;
 }
 
 .content ::ng-deep * {
