refactor feed sources store struct

--- a/client/src/app/feed-source-page/feed-source-page.component.html
+++ b/client/src/app/feed-source-page/feed-source-page.component.html
@@ -1,6 +1,6 @@
 <div>
   <app-feed-source-item
-    *ngFor="let source of (feedSourceService.feedSources$ | async)"
+    *ngFor="let source of feedSources"
     [source]="source"
   ></app-feed-source-item>
 </div>
