--- a/client/src/app/feed-list/feed-list.component.html
+++ b/client/src/app/feed-list/feed-list.component.html
@@ -11,7 +11,7 @@
         <span>{{ feed.author }}</span>
         <span class="time-distance">{{
           calcPublishedDistance(feed.publishedDate)
-        }}</span>
+        }} ago</span>
       </p>
     </div>
   </mat-list-item>
