--- a/client/src/app/feed-list/feed-list.component.html
+++ b/client/src/app/feed-list/feed-list.component.html
@@ -9,9 +9,9 @@
     <div matLine>
       <p class="info">
         <span>{{ feed.author }}</span>
-        <span class="time-distance">{{
-          calcPublishedDistance(feed.publishedDate)
-        }} ago</span>
+        <span class="time-distance"
+          >{{ calcPublishedDistance(feed.publishedDate) }} ago</span
+        >
       </p>
     </div>
   </mat-list-item>
