--- a/client/src/app/setting-page/setting-page.component.css
+++ b/client/src/app/setting-page/setting-page.component.css
@@ -1,3 +1,23 @@
 :host .app-container {
   padding: 20px;
+  background-color: white;
+}
+
+:host .side-links {
+  list-style: none;
+  padding: 0;
+}
+
+.side-links a {
+  text-decoration: none;
+  font-weight: bold;
+  font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
+}
+
+:host .mat-drawer {
+  padding-right: 20px;
+}
+
+:host .mat-drawer-content {
+  background-color: white;
 }
