--- a/client/src/app/category/category.component.html
+++ b/client/src/app/category/category.component.html
@@ -1,6 +1,6 @@
 <mat-list>
-  <mat-list-item *ngFor="let category of categorys">
-    <mat-icon *ngIf="category.type === 'all'" svgIcon="track-change"></mat-icon>
+  <mat-list-item (click)="onCategoryClick(category)" *ngFor="let category of categorys" [disableRipple]="false">
+    <fa-icon size="1x" [icon]="category.icon"></fa-icon>
     <span>{{ category.name }}</span>
   </mat-list-item>
 </mat-list>
