--- a/client/src/app/setting-page/setting-page.component.html
+++ b/client/src/app/setting-page/setting-page.component.html
@@ -1,6 +1,6 @@
 <mat-drawer-container class="app-container">
   <mat-drawer mode="side" opened>
-      <a routerLink="/">
+      <a class="go-back-link" routerLink="/">
           <fa-icon [icon]="faArrowLeft"></fa-icon>
           Go back
       </a>
