--- a/client/src/app/category/category.component.html
+++ b/client/src/app/category/category.component.html
@@ -1,8 +1,8 @@
 <mat-list>
 
   <a mat-list-item *ngFor="let category of categorys" [routerLink]="'/feed/' + category.id">
-      <fa-icon size="1x" [icon]="category.icon"></fa-icon>
-      <span>{{ category.name }}</span>
+    <fa-icon size="1x" [icon]="category.icon" [style.color]="category.color"></fa-icon>
+    <span>{{ category.name }}</span>
   </a>
 
 </mat-list>
