move push controller component to notification page

--- a/client/src/app/article-preview/article-preview.component.html
+++ b/client/src/app/article-preview/article-preview.component.html
@@ -12,5 +12,5 @@
 </div>
 
 <div class="logo-container" *ngIf="!feed">
-  <img class="logo" src="/assets/logo.png" alt="logo">
+  <img class="logo" src="/assets/logo.png" alt="logo" />
 </div>
