--- a/client/src/app/notification-page/notification-page.component.html
+++ b/client/src/app/notification-page/notification-page.component.html
@@ -1,3 +1,7 @@
-<p>
-  notification-page works!
-</p>
+<button mat-fab (click)="subscribeToPush()">
+  <mat-icon svgIcon="notifications">subscribe</mat-icon>
+</button>
+
+<button mat-mini-fab (click)="ping()" color="warn">
+  <mat-icon svgIcon="send">send</mat-icon>
+</button>
