initital custom theming

--- a/client/src/app/category/category.component.html
+++ b/client/src/app/category/category.component.html
@@ -12,9 +12,11 @@
     <span>{{ category.name }}</span>
   </a>
 
-  <a mat-list-item routerLink="setting">>
-    setting
-  </a>
+  
 </mat-list>
+
+<a mat-list-item routerLink="/setting">
+  setting
+</a>
 
 
