--- a/client/src/app/notification-page/notification-page.component.html
+++ b/client/src/app/notification-page/notification-page.component.html
@@ -1,6 +1,8 @@
-<button mat-fab (click)="subscribeToPush()">
-  <mat-icon svgIcon="notifications">subscribe</mat-icon>
-</button>
+<mat-card>
+  <button mat-raised-button color="primary" (click)="subscribeToPush()">
+    subscribe web push
+  </button>
+</mat-card>
 
 <button mat-mini-fab (click)="ping()" color="warn">
   <mat-icon svgIcon="send">send</mat-icon>
