about restyle feed source

--- a/client/src/app/category/category.component.html
+++ b/client/src/app/category/category.component.html
@@ -11,12 +11,6 @@
     ></fa-icon>
     <span>{{ category.name }}</span>
   </a>
-
-  
 </mat-list>
 
-<a mat-list-item routerLink="/setting">
-  setting
-</a>
-
-
+<a mat-list-item routerLink="/setting"> setting </a>
