--- a/client/src/app/feed-source-page/feed-source-creater/feed-source-creater.component.html
+++ b/client/src/app/feed-source-page/feed-source-creater/feed-source-creater.component.html
@@ -1,3 +1,7 @@
+<button mat-fab>
+    <fa-icon class="plus" [icon]="faPlus"></fa-icon>
+</button>
+
 <form [formGroup]="form">
   <mat-form-field class="">
     <input matInput placeholder="Name" formControlName="name" />
