--- a/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.html
+++ b/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.html
@@ -1,5 +1,9 @@
-<div>
-  {{ source.name }}
+<div class="container">
+
+  <span class="name">
+      {{ source.name }}
+  </span>
+  
 
   {{ source.url }}
 </div>
