--- a/client/src/app/setting-page/setting-page.component.html
+++ b/client/src/app/setting-page/setting-page.component.html
@@ -20,7 +20,5 @@
     </ul>
   </mat-drawer>
 
-  <mat-drawer-content>
-    <router-outlet></router-outlet>
-  </mat-drawer-content>
+  <mat-drawer-content> <router-outlet></router-outlet> </mat-drawer-content>
 </mat-drawer-container>
