--- a/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.css
+++ b/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.css
@@ -1,14 +1,24 @@
 :host {
-  display: block;
+  display: flex;
+  width: 100%;
+  align-items: center;
 }
 
-.container:hover {
-  background-color: azure;
+:host:hover {
+}
+
+.url {
+  width: 100%;
 }
 
 .name {
+  flex-shrink: 0;
   display: inline-block;
   width: 150px;
   overflow: hidde;
   text-overflow: ellipsis;
+}
+
+.remove-button {
+  flex-shrink: 0;
 }
