--- a/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.html
+++ b/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.html
@@ -1,9 +1,7 @@
-<div class="container">
+<span class="name">
+    {{ source.name }}
+</span>
 
-  <span class="name">
-      {{ source.name }}
-  </span>
-  
+<span class="url">{{ source.url }}</span>
 
-  {{ source.url }}
-</div>
+<button class="remove-button" mat-button (click)="remove()">Remove</button>
