--- a/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.css
+++ b/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.css
@@ -4,9 +4,6 @@
   align-items: center;
 }
 
-:host:hover {
-}
-
 .url {
   width: 100%;
 }
@@ -21,4 +18,5 @@
 
 .remove-button {
   flex-shrink: 0;
+  color: #777;
 }
