--- a/client/src/app/category/category.component.html
+++ b/client/src/app/category/category.component.html
@@ -2,6 +2,7 @@
   <a
     mat-list-item
     *ngFor="let category of categorys"
+    routerLinkActive="active"
     [routerLink]="'/feed/' + category.id"
   >
     <fa-icon
@@ -13,4 +14,7 @@
   </a>
 </mat-list>
 
-<a mat-list-item routerLink="/setting"> setting </a>
+<a mat-list-item routerLink="/setting" class="setting">
+  <fa-icon size="1x" [icon]="faCog"></fa-icon>
+  setting
+</a>
