--- a/client/src/app/feed-list/feed-list.component.css
+++ b/client/src/app/feed-list/feed-list.component.css
@@ -9,6 +9,10 @@
   border-top-width: 0;
 }
 
+.active {
+  background-color: #fff0e1 !important;
+}
+
 h3 {
   font-size: 18px;
   font-weight: 600 !important;
@@ -22,7 +26,7 @@ h3 {
 }
 
 .mat-nav-list {
-  padding: 8px 0 20px;
+  padding: 0px 0 20px;
 }
 
 .mat-list-avatar {
@@ -35,6 +39,10 @@ h3 {
   position: relative;
   height: auto !important;
   box-sizing: border-box;
+}
+
+.mat-list-item:hover {
+  background-color: #fff6e4 !important;
 }
 
 .mat-list-item:after {
