--- a/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.html
+++ b/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.html
@@ -1,7 +1,7 @@
 <span class="name">
-    {{ source.name }}
+  {{ source.name }}
 </span>
 
 <span class="url">{{ source.url }}</span>
 
-<button class="remove-button" mat-button (click)="remove()">Remove</button>
+<button class="remove-button" mat-button (click)="remove()" color="warn">Remove</button>
