--- a/client/src/theme.scss
+++ b/client/src/theme.scss
@@ -43,10 +43,10 @@ $app-primary-palette: (
 );
 
 $candy-app-primary: mat-palette($app-primary-palette);
-$candy-app-accent:  mat-palette($mat-pink, A200, A100, A400);
+$candy-app-accent:  mat-palette(#f89d6a, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$candy-app-warn:    mat-palette($mat-red);
+$candy-app-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
 $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-app-warn);
