--- a/client/src/theme.scss
+++ b/client/src/theme.scss
@@ -42,8 +42,42 @@ $app-primary-palette: (
   )
 );
 
+
+$app-accent: (
+  50: #fce4ec,
+  100: #f8bbd0,
+  200: #f48fb1,
+  300: #f06292,
+  400: #ec407a,
+  500: #e91e63,
+  600: #d81b60,
+  700: #c2185b,
+  800: #ad1457,
+  900: #880e4f,
+  A100: #ff80ab,
+  A200: #ff4081,
+  A400: #f50057,
+  A700: #c51162,
+  contrast: (
+    50: $dark-primary-text,
+    100: $dark-primary-text,
+    200: $dark-primary-text,
+    300: $dark-primary-text,
+    400: $dark-primary-text,
+    500: $light-primary-text,
+    600: $light-primary-text,
+    700: $light-primary-text,
+    800: $light-primary-text,
+    900: $light-primary-text,
+    A100: $dark-primary-text,
+    A200: $light-primary-text,
+    A400: $light-primary-text,
+    A700: $light-primary-text,
+  )
+);
+
 $candy-app-primary: mat-palette($app-primary-palette);
-$candy-app-accent:  mat-palette(#f89d6a, A200, A100, A400);
+$candy-app-accent:  mat-palette($app-accent, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
 $candy-app-warn: mat-palette($mat-red);
